Modificando testes e criando função verifyLogin.

--- a/backend/source/makefile
+++ b/backend/source/makefile
@@ -12,7 +12,7 @@ LIBS=-lm $(shell mysql_config --libs)
 SRC_FILES := JsonModule.cpp DatabaseModule.cpp Backend.cpp
 OBJ_FILES := $(patsubst ./%.cpp,$(ODIR)/%.o,$(SRC_FILES))
 
-TEST_SRC_FILES := JsonModule.cpp Test.cpp
+TEST_SRC_FILES := JsonModule.cpp DatabaseModule.cpp UserManager.cpp Test.cpp
 TEST_OBJ_FILES := $(patsubst ./%.cpp,$(ODIR)/%.o,$(TEST_SRC_FILES))
 
 $(ODIR)/%.o: %.cpp
