--- a/backend/source/makefile
+++ b/backend/source/makefile
@@ -4,15 +4,20 @@ CC=g++
 CFLAGS=-I$(IDIR) -ljsoncpp $(shell mysql_config --cflags)
 GTEST_FLAGS=-lgtest -lpthread
 
-ODIR :=../bin/obj	# Diretório de objetos
-LDIR :=../lib		# Diretório de libs
+ODIR :=../bin/obj	# Diretório de objetos.
+LDIR :=../lib		# Diretório de libs.
 
 LIBS=-lm $(shell mysql_config --libs)
 
-SRC_FILES := JsonModule.cpp DatabaseModule.cpp UserManager.cpp Backend.cpp
-OBJ_FILES := $(patsubst ./%.cpp,$(ODIR)/%.o,$(SRC_FILES))
+# Arquivos de codigo fonte comuns.
+COMMON_SRC_FILES := JsonModule.cpp DatabaseModule.cpp UserManager.cpp
 
-TEST_SRC_FILES := JsonModule.cpp DatabaseModule.cpp UserManager.cpp Test.cpp
+# Arquivos de código fonte exclusivos do deploy do backend.
+BACKEND_SRC_FILES := $(COMMON_SRC_FILES) Backend.cpp
+BACKEND_OBJ_FILES := $(patsubst ./%.cpp,$(ODIR)/%.o,$(BACKEND_SRC_FILES))
+
+# Arquivos de código fonte exclusivos para testes unitários.
+TEST_SRC_FILES := $(COMMON_SRC_FILES) $(wildcard ../tests/*.cpp)
 TEST_OBJ_FILES := $(patsubst ./%.cpp,$(ODIR)/%.o,$(TEST_SRC_FILES))
 
 $(ODIR)/%.o: %.cpp
@@ -21,7 +26,7 @@ $(ODIR)/%.o: %.cpp
 test: $(TEST_OBJ_FILES)
 	$(CC) -o ../bin/$@ $^ $(CFLAGS) $(LIBS) $(GTEST_FLAGS)
 
-backend:  $(OBJ_FILES)
+backend:  $(BACKEND_OBJ_FILES)
 	$(CC) -o ../bin/$@ $^ $(CFLAGS) $(LIBS)
 
 .PHONY: clean cleanTest
