Adicionando comando de execução do gcov, teste de cobertura

--- a/backend/sources/makefile
+++ b/backend/sources/makefile
@@ -1,7 +1,7 @@
 
 INCLUDES=-I../headers -I../headers/classes -I../tests/
 CC=g++
-CFLAGS=$(INCLUDES) -ljsoncpp $(shell mysql_config --cflags)
+CFLAGS=$(INCLUDES) -ljsoncpp $(shell mysql_config --cflags) -ftest-coverage -fprofile-arcs
 GTEST_FLAGS=-lgtest -lpthread
 
 ODIR :=../bin/obj	# Diretório de objetos.
@@ -10,10 +10,10 @@ LDIR :=../lib		# Diretório de libs.
 LIBS=-lm $(shell mysql_config --libs)
 
 # Arquivos de codigo fonte comuns.
-COMMON_SRC_FILES := JsonModule.cpp DatabaseModule.cpp UserManager.cpp ProductManager.cpp $(wildcard classes/*.cpp)
+COMMON_SRC_FILES := ../sources/JsonModule.cpp ../sources/DatabaseModule.cpp ../sources/UserManager.cpp ../sources/ProductManager.cpp $(wildcard ../sources/classes/*.cpp)
 
 # Arquivos de código fonte exclusivos do deploy do backend.
-BACKEND_SRC_FILES := $(COMMON_SRC_FILES) Backend.cpp
+BACKEND_SRC_FILES := $(COMMON_SRC_FILES) ../sources/Backend.cpp
 BACKEND_OBJ_FILES := $(patsubst ./%.cpp,$(ODIR)/%.o,$(BACKEND_SRC_FILES))
 
 # Arquivos de código fonte exclusivos para testes unitários.
